GRAD2-2366 HD-22692-P2 GRAD Incident: XML Previews no longer include Course/Assessment Registrations in GRAD/STS