@@ -13,6 +13,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Data
 @Component
@@ -44,7 +45,7 @@ public class FrenchImmersionMinElectiveCreditsRule implements Rule {
                 .filter(gradOptionalProgramRule -> "MCE".compareTo(gradOptionalProgramRule.getOptionalProgramRequirementCode().getRequirementTypeCode().getReqTypeCode()) == 0
                 		&& "Y".compareTo(gradOptionalProgramRule.getOptionalProgramRequirementCode().getActiveRequirement()) == 0
                 		&& "C".compareTo(gradOptionalProgramRule.getOptionalProgramRequirementCode().getRequirementCategory()) == 0)
-                .toList();
+                .collect(Collectors.toList());
        
         logger.debug("#### French Immersion Min Credit Elective Optional Program Rule size: {}",gradOptionalProgramMinCreditElectiveRulesMatch.size());
         List<StudentCourse> finalCourseList = new ArrayList<>();
@@ -53,9 +54,9 @@ public class FrenchImmersionMinElectiveCreditsRule implements Rule {
         List<StudentCourse> matchedList = courseList
         		.stream()
         		.filter(StudentCourse::isUsed)
-        		.toList();
+        		.collect(Collectors.toList());
 
-        List<StudentCourse> modifiedList = courseList.stream().filter(sc -> !sc.isUsed()).sorted(Comparator.comparing(StudentCourse::getCourseLevel).reversed()).toList();
+        List<StudentCourse> modifiedList = courseList.stream().filter(sc -> !sc.isUsed()).sorted(Comparator.comparing(StudentCourse::getCourseLevel).reversed()).collect(Collectors.toList());
         ListIterator<StudentCourse> studentCourseIterator = modifiedList.listIterator();
         int totalCredits = 0;        
         int requiredCredits = 0;
@@ -71,7 +72,7 @@ public class FrenchImmersionMinElectiveCreditsRule implements Rule {
 	        		}
 	            }
         	}
-            AlgorithmSupportRule.copyAndAddIntoStudentCoursesList(sc, finalCourseList, objectMapper);
+            AlgorithmSupportRule.copyAndAddIntoStudentCoursesList(sc, finalCourseList);
             if ((totalCredits == requiredCredits) && totalCredits != 0) {
             	requirementAchieved = true;
             }
@@ -106,7 +107,7 @@ public class FrenchImmersionMinElectiveCreditsRule implements Rule {
         			}         		
         		}
         	}
-            AlgorithmSupportRule.copyAndAddIntoStudentCoursesList(sc, finalCourseList2, objectMapper);
+            AlgorithmSupportRule.copyAndAddIntoStudentCoursesList(sc, finalCourseList2);
             
             if ((totalCreditsGrade11or12 == requiredCreditsGrad11or12) && totalCreditsGrade11or12 != 0) {
             	requirementAchieved = true;
@@ -126,7 +127,7 @@ public class FrenchImmersionMinElectiveCreditsRule implements Rule {
 
         obj.setStudentCoursesOptionalProgram(RuleEngineApiUtils.getClone(finalCourseList2));
         List<OptionalProgramRequirement> failedRules = gradOptionalProgramMinCreditElectiveRulesMatch.stream()
-                .filter(pr -> !pr.getOptionalProgramRequirementCode().isPassed()).toList();
+                .filter(pr -> !pr.getOptionalProgramRequirementCode().isPassed()).collect(Collectors.toList());
 
         if (failedRules.isEmpty()) {
             logger.debug("All the Min Elective Credit rules met!");
