@@ -12,6 +12,7 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Data
 @Component
@@ -44,7 +45,7 @@ public class MainProgramCompleteRule implements Rule {
 				.stream()
 				.filter(gradOptionalProgramRule -> "SR".compareTo(gradOptionalProgramRule.getOptionalProgramRequirementCode().getRequirementTypeCode().getReqTypeCode()) == 0
 						&& "Y".compareTo(gradOptionalProgramRule.getOptionalProgramRequirementCode().getActiveRequirement()) == 0)
-				.toList();
+				.collect(Collectors.toList());
 		for(OptionalProgramRequirement opReq:optionalProgramNoRule) {
 			if(opReq.getOptionalProgramRequirementCode().getOptProReqCode().compareTo("957")==0) {
 				if (nonGradReasons == null || nonGradReasons.isEmpty()) {
@@ -55,7 +56,7 @@ public class MainProgramCompleteRule implements Rule {
 					opReq.getOptionalProgramRequirementCode().setPassed(false);
 				}
 				List<OptionalProgramRequirement> failedRules = obj.getOptionalProgramRules().stream()
-						.filter(pr -> !pr.getOptionalProgramRequirementCode().isPassed()).toList();
+						.filter(pr -> !pr.getOptionalProgramRequirementCode().isPassed()).collect(Collectors.toList());
 
 				if (failedRules.isEmpty()) {
 					logger.debug("All the match rules met!");
