@@ -14,6 +14,7 @@ import org.springframework.stereotype.Component;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @Component
@@ -37,7 +38,7 @@ public class MinElectiveCredits2023Rule implements Rule {
 		List<ProgramRequirement> gradProgramRules = ruleProcessorData
 				.getGradProgramRules().stream().filter(gpr -> "MCE".compareTo(gpr.getProgramRequirementCode().getRequirementTypeCode().getReqTypeCode()) == 0
 						&& "Y".compareTo(gpr.getProgramRequirementCode().getActiveRequirement()) == 0 && "C".compareTo(gpr.getProgramRequirementCode().getRequirementCategory()) == 0)
-				.toList();
+				.collect(Collectors.toList());
 
 		if (studentCourses == null || studentCourses.isEmpty()) {
 			logger.warn("!!!Empty list sent to Min Elective Credits Rule for processing");
@@ -109,7 +110,7 @@ public class MinElectiveCredits2023Rule implements Rule {
 
 			List<ProgramRequirement> matchProgramRequirements = ruleProcessorData.getGradProgramRules().stream()
 					.filter(pr -> "M".compareTo(pr.getProgramRequirementCode().getRequirementTypeCode().getReqTypeCode()) == 0)
-					.toList();
+					.collect(Collectors.toList());
 
 			for (ProgramRequirement pr : matchProgramRequirements) {
 				if (Arrays.asList(gradReqMetList).contains(pr.getProgramRequirementCode().getTraxReqNumber()))
