@@ -12,6 +12,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Data
 @Component
@@ -43,7 +44,7 @@ public class MinElectiveCreditsFrench1996Rule implements Rule {
         List<ProgramRequirement> gradProgramRules = ruleProcessorData
                 .getGradProgramRules().stream().filter(gpr -> "MCE".compareTo(gpr.getProgramRequirementCode().getRequirementTypeCode().getReqTypeCode()) == 0
                         && "Y".compareTo(gpr.getProgramRequirementCode().getActiveRequirement()) == 0 && "C".compareTo(gpr.getProgramRequirementCode().getRequirementCategory()) == 0)
-                .toList();
+                .collect(Collectors.toList());
 
         for (ProgramRequirement gradProgramRule : gradProgramRules) {
            if(gradProgramRule.getProgramRequirementCode().getRequiredLevel() != null && gradProgramRule.getProgramRequirementCode().getRequiredLevel().trim().compareTo("11 or 12") == 0 ) {
@@ -55,7 +56,7 @@ public class MinElectiveCreditsFrench1996Rule implements Rule {
                                    && (sc.getCourseLevel().contains("11")
                                    || sc.getCourseLevel().contains("12"))
                                    && sc.getLanguage() != null && sc.getLanguage().trim().compareTo("F")==0)
-                           .toList();
+                           .collect(Collectors.toList());
 
 
                for (StudentCourse sc : tempStudentCourseList) {
